[package]
name = "simple-video-editor"
version.workspace = true
authors.workspace = true
edition.workspace = true
license-file.workspace = true

[dependencies]
derive-new.workspace = true
anyhow.workspace = true
bytemuck = "1.24.0"
eframe = "0.33.3"
rmf-host = { path = "../../packages/frameworks/rmf-host" }
tokio = { version = "1.48.0", features = [
  "time",
  "sync",
  "rt-multi-thread",
  "macros",
] }
